# matrix.calculator

./: .gitignore  CMakeLists.txt  README.md
src/core/: constants.h  errors.h  matrix.h
src/io/: matrix_input.cpp  matrix_input.h
src/report/: runner.h  step.h
src/util/: value.h  value_printer.h
